--- a/data_management_importer/.env.example
+++ b/data_management_importer/.env.example
@@ -6,4 +6,4 @@ mysql_db=knowledge_environment
 mongo_host=localhost
 mongo_db=dataLake
 spectrack_token=st_token
-spectrack_url=https://specimen.kpmp.org/st_api/v1/
+spectrack_base_url=https://specimen.kpmp.org/st_api/v1/
