--- a/data_management/.env.example
+++ b/data_management/.env.example
@@ -7,5 +7,5 @@ mongo_host=localhost
 mongo_db=dataLake
 spectrack_token=st_token
 spectrack_base_url=https://specimen.kpmp.org/st_api/v1/
-mongo_data_directory=
+globus_data_directory=
 dlu_data_directory=
