--- a/data_management/.env.example
+++ b/data_management/.env.example
@@ -4,6 +4,7 @@ mysql_host=localhost
 mysql_port=3306
 mysql_db=knowledge_environment
 mongo_host=localhost
+mongo_port=27017
 mongo_db=dataLake
 spectrack_token=st_token
 spectrack_base_url=https://specimen.kpmp.org/st_api/v1/
