--- a/data_management/.env.example
+++ b/data_management/.env.example
@@ -8,6 +8,7 @@ mongo_port=27017
 mongo_db=dataLake
 # Nikki PROD
 mongo_submitter_id=62547416d100c500f37ddf82
+submitter_name=Nikki Bonevich
 spectrack_token=st_token
 spectrack_base_url=https://specimen.kpmp.org/st_api/v1/
 globus_data_directory=
