KPMP-4795: Handle segmentation data

--- a/data_management/Dockerfile
+++ b/data_management/Dockerfile
@@ -24,6 +24,7 @@ COPY lib.egg-info/ ./lib.egg-info
 COPY dist/ ./dist
 COPY main.py ./
 COPY app.py ./
+COPY process_bulk_uploads.py ./
 COPY services/ ./services
 
 ENTRYPOINT []
