--- a/.github/workflows/build-libra.yml
+++ b/.github/workflows/build-libra.yml
@@ -33,6 +33,7 @@ jobs:
           if: steps.branch-names.outputs.current_branch == 'develop'
           uses: docker/build-push-action@v6
           with:
+            context: .
             push: true
             tags: 
               "kingstonduo/data-management:$IMAGE_TAG"
@@ -41,6 +42,7 @@ jobs:
           if: steps.branch-names.outputs.current_branch == 'develop'
           uses: docker/build-push-action@v6
           with:
+            context: .
             push: true
             file: "./DluWatcher"
             tags: 
@@ -51,6 +53,7 @@ jobs:
           if: steps.branch-names.outputs.current_branch != 'develop'
           uses: docker/build-push-action@v6
           with:
+            context: .
             push: true
             tags: 
               "kingstonduo/data-management:${{steps.branch-names.outputs.current_branch}}"
@@ -59,6 +62,7 @@ jobs:
           if: steps.branch-names.outputs.current_branch != 'develop'
           uses: docker/build-push-action@v6
           with:
+            context: .
             push: true
             file: "./DluWatcher"
             tags: 
