--- a/data_management/Dockerfile
+++ b/data_management/Dockerfile
@@ -31,6 +31,7 @@ COPY dist/ ./dist
 COPY main.py ./
 COPY app.py ./
 COPY process_bulk_uploads.py ./
+RUN mkdir -p ./services
 COPY services/ ./services
 
 ENTRYPOINT []
