--- a/data_management/Dockerfile
+++ b/data_management/Dockerfile
@@ -29,7 +29,7 @@ COPY main.py ./
 COPY app.py ./
 COPY process_bulk_uploads.py ./
 RUN mkdir -p ./services
-COPY services/ /usr/src/app/services
+COPY services/ ./services
 
 ENTRYPOINT []
 
