--- a/.github/workflows/build-libra.yml
+++ b/.github/workflows/build-libra.yml
@@ -34,7 +34,7 @@ jobs:
           uses: docker/build-push-action@v6
           with:
             context: ./data_management
-            file: ./data_management/Dockerfile
+            file: ./Dockerfile
             push: true
             tags: 
               "kingstonduo/data-management:$IMAGE_TAG"
@@ -45,7 +45,7 @@ jobs:
           with:
             context: ./data_management
             push: true
-            file: "./data_management/DluWatcher"
+            file: "./DluWatcher"
             tags: 
               "kingstonduo/dlu-watcher:$IMAGE_TAG"
         
@@ -55,7 +55,7 @@ jobs:
           uses: docker/build-push-action@v6
           with:
             context: ./data_management
-            file: "./data_management/Dockerfile"
+            file: "./Dockerfile"
             push: true
             tags: 
               "kingstonduo/data-management:${{steps.branch-names.outputs.current_branch}}"
@@ -66,6 +66,6 @@ jobs:
           with:
             context: ./data_management
             push: true
-            file: "./data_management/DluWatcher"
+            file: "./DluWatcher"
             tags: 
               "kingstonduo/dlu-watcher:${{steps.branch-names.outputs.current_branch}}"
