--- a/.github/workflows/build-libra.yml
+++ b/.github/workflows/build-libra.yml
@@ -18,12 +18,12 @@ jobs:
              echo "Running on branch: ${{ steps.branch-names.outputs.current_branch }}"
         - name: Checkout project sources
           uses: actions/checkout@v4
-        -
-          name: Set up QEMU
-          uses: docker/setup-qemu-action@v3
-        -
-          name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
+        # -
+        #   name: Set up QEMU
+        #   uses: docker/setup-qemu-action@v3
+        # -
+        #   name: Set up Docker Buildx
+        #   uses: docker/setup-buildx-action@v3
         -
           name: Login to Docker Hub
           uses: docker/login-action@v3
@@ -33,23 +33,27 @@ jobs:
         -
           name: Build and push data-management image for develop branch
           if: steps.branch-names.outputs.current_branch != 'develop'
-          uses: docker/build-push-action@v6
-          with:
-            context: ./data_management
-            file: ./data_management/Dockerfile
-            push: true
-            tags: 
-              "kingstonduo/data-management:$IMAGE_TAG"
+          run: |
+            "docker build -t kingstonduo/data-management:$IMAGE_TAG -f ./data_management/Dockerfile"
+        #   uses: docker/build-push-action@v6
+        #   with:
+        #     context: ./data_management
+        #     file: ./data_management/Dockerfile
+        #     push: true
+        #     tags: 
+        #       "kingstonduo/data-management:$IMAGE_TAG"
         -
           name: Build and push dlu-watcher image for develop branch
           if: steps.branch-names.outputs.current_branch != 'develop'
-          uses: docker/build-push-action@v6
-          with:
-            context: ./data_management
-            push: true
-            file: "./data_management/DluWatcher"
-            tags: 
-              "kingstonduo/dlu-watcher:$IMAGE_TAG"
+          run: |
+            "docker build -t kingstonduo/dlu-watcher:$IMAGE_TAG -f ./data_management/DluWatcher"
+        #   uses: docker/build-push-action@v6
+        #   with:
+        #     context: ./data_management
+        #     push: true
+        #     file: "./data_management/DluWatcher"
+        #     tags: 
+        #       "kingstonduo/dlu-watcher:$IMAGE_TAG"
         
         # -
         #   name: Build and push data-management image for non develop branch
