--- a/.github/workflows/build-libra.yml
+++ b/.github/workflows/build-libra.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   docker:
     env:
-        IMAGE_TAG: "blahblah"
+        IMAGE_TAG: "1.8"
     runs-on: ubuntu-latest
     steps:
         - name: Get branch names
