add gunicorn and run in entry point

--- a/data_management/Dockerfile
+++ b/data_management/Dockerfile
@@ -30,5 +30,5 @@ COPY app.py ./
 COPY process_bulk_uploads.py ./
 COPY services/ ./services
 
-ENTRYPOINT []
+ENTRYPOINT ["gunicorn", "-b", ":5000", "app:app"]
 
