KPMP-5735: Parameterized the dlu hostname so emails are correct

--- a/data_management/.env.example
+++ b/data_management/.env.example
@@ -13,3 +13,4 @@ spectrack_token=st_token
 spectrack_base_url=https://specimen.kpmp.org/st_api/v1/
 globus_data_directory=
 dlu_data_directory=
+dlu_hostname_with_underscores=upload_kpmp_org
