KPMP-5967: tableau connection

--- a/data_management/.env.example
+++ b/data_management/.env.example
@@ -3,6 +3,12 @@ mysql_pwd=test
 mysql_host=localhost
 mysql_port=3306
 mysql_db=data_management
+tableau_host=
+tableau_port=3306
+tableau_user=
+tableau_password=
+tableau_database_name=
+tableau_ca_file=us-west-2-bundle.pem
 mongo_host=localhost
 mongo_port=27017
 mongo_db=dataLake
